--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'org.greenrobot.greendao'
 
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
@@ -20,6 +21,7 @@ android {
     }
 }
 
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -31,6 +33,11 @@ dependencies {
 
 
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.afollestad.material-dialogs:core:0.9.1.0'
+    compile 'com.android.support:cardview-v7:24.2.1'
+    compile 'com.android.support:palette-v7:24.2.1'
+    provided rootProject.ext.dependencies.dagger2_compiler
+//    provided rootProject.ext.dependencies.dagger2
     testCompile 'junit:junit:4.12'
 
 
