--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:24.2.1'
     compile 'com.android.support:palette-v7:24.2.1'
     provided rootProject.ext.dependencies.dagger2_compiler
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
 //    provided rootProject.ext.dependencies.dagger2
     testCompile 'junit:junit:4.12'
 
