--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'org.greenrobot.greendao'
+apply plugin: 'com.jakewharton.butterknife'
 
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
@@ -37,6 +38,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:24.2.1'
     compile 'com.android.support:palette-v7:24.2.1'
     provided rootProject.ext.dependencies.dagger2_compiler
+    provided rootProject.ext.dependencies.butterknife_compiler
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
 //    provided rootProject.ext.dependencies.dagger2
     testCompile 'junit:junit:4.12'
