--- a/commonlibrary/src/main/AndroidManifest.xml
+++ b/commonlibrary/src/main/AndroidManifest.xml
@@ -5,6 +5,9 @@
     <application android:allowBackup="true" android:label="@string/app_name"
         android:supportsRtl="true">
 
+    <meta-data android:name="com.example.commonlibrary.GlideConfig"
+        android:value="GlideModule"/>
     </application>
+
 
 </manifest>
