--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,14 +33,14 @@ dependencies {
 //    compile 'com.android.support:appcompat-v7:26.+'
 
 
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+//    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.afollestad.material-dialogs:core:0.9.1.0'
     compile 'com.android.support:cardview-v7:24.2.1'
     compile 'com.android.support:palette-v7:24.2.1'
     provided rootProject.ext.dependencies.dagger2_compiler
     provided rootProject.ext.dependencies.butterknife_compiler
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
-    compile 'com.sothree.slidinguppanel:library:3.3.1'
+//    compile 'com.sothree.slidinguppanel:library:3.3.1'
 //    compile 'net.steamcrafted:materialiconlib:1.1.1'
 
 //    provided rootProject.ext.dependencies.dagger2
