--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     compile 'com.android.support:palette-v7:24.2.1'
     provided rootProject.ext.dependencies.dagger2_compiler
     provided rootProject.ext.dependencies.butterknife_compiler
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
+//    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
 //    compile 'com.sothree.slidinguppanel:library:3.3.1'
 //    compile 'net.steamcrafted:materialiconlib:1.1.1'
 
