--- a/commonlibrary/build.gradle
+++ b/commonlibrary/build.gradle
@@ -15,6 +15,11 @@ android {
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [moduleName: project.getName()]
+            }
+        }
     }
     buildTypes {
         release {
@@ -23,7 +28,6 @@ android {
         }
     }
 }
-
 
 //greendao {
 //    schemaVersion 1
@@ -45,8 +49,6 @@ dependencies {
     }
     compile rootProject.ext.dependencies.recycleview
     compile rootProject.ext.dependencies.design
-
-
 
 //    compile(rootProject.ext.dependencies.support_v4) {
 //        exclude module: "support-annotations"
@@ -98,7 +100,7 @@ dependencies {
     compile rootProject.ext.dependencies.glide
     compile rootProject.ext.dependencies.eventBus
     compile rootProject.ext.dependencies.dagger2
-    compile(rootProject.ext.dependencies.rxpermission){
+    compile(rootProject.ext.dependencies.rxpermission) {
         exclude module: 'rxjava'
     }
     compile rootProject.ext.dependencies.retrofit_converter_scalars
@@ -106,4 +108,6 @@ dependencies {
     annotationProcessor rootProject.ext.dependencies.butterknife_compiler
     compile rootProject.ext.dependencies.butterknife
     compile rootProject.ext.dependencies.transformations
+
+    compile rootProject.ext.dependencies.arouter_api
 }
