--- a/config.gradle
+++ b/config.gradle
@@ -1,5 +1,5 @@
 ext {
-    isAlone = true;//false:作为Lib组件存在， true:作为application存在
+    isAlone = false;//false:作为Lib组件存在， true:作为application存在
 
     android = [
             compileSdkVersion: 24,
@@ -29,8 +29,8 @@ ext {
             dagger_compiler = "2.11",
             dagger = "2.11",
             greenDao = "3.2.2",
-            arouter_api = "1.2.1",
-            arouter_compiler = "1.1.2",
+            arouter_api = "1.2.2",
+            arouter_compiler = "1.1.3",
             transformations = "2.0.2",
             rxjava_adapter = "2.3.0",
             gson_converter = "2.3.0",
