--- a/video/src/main/module/AndroidManifest.xml
+++ b/video/src/main/module/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <uses-permission android:name="android.permission.BROADCAST_STICKY" />
 
     <application
-        android:name=".MainApplication"
+        android:name="com.example.commonlibrary.BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
