--- a/video/build.gradle
+++ b/video/build.gradle
@@ -66,8 +66,8 @@ dependencies {
     compile project(':commonlibrary')
 
     compile 'com.afollestad.material-dialogs:core:0.9.1.0'
-    compile 'com.android.support:cardview-v7:24.2.1'
-    compile 'com.android.support:palette-v7:24.2.1'
+    compile rootProject.ext.dependencies.cardview
+    compile rootProject.ext.dependencies.palette
 //    provided rootProject.ext.dependencies.dagger2_compiler
 
     apt rootProject.ext.dependencies.dagger2_compiler
