--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,12 @@ android {
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
+        ndk {
+            // 设置支持的SO库架构
+            abiFilters 'armeabi' //, 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
+        }
+
+
         if (!rootProject.ext.isAlone) {
             javaCompileOptions {
                 annotationProcessorOptions {
@@ -58,13 +64,20 @@ dependencies {
     } else {
         compile project(':commonlibrary')
     }
-    provided('com.tinkerpatch.tinker:tinker-android-anno:1.8.0') {
-        changing = true
-    }
-    compile('com.tinkerpatch.sdk:tinkerpatch-android-sdk:1.1.8') {
-        changing = true
-    }
+//    provided('com.tinkerpatch.tinker:tinker-android-anno:1.8.0') {
+//        changing = true
+//    }
+//    compile('com.tinkerpatch.sdk:tinkerpatch-android-sdk:1.1.8') {
+//        changing = true
+//    }
     //    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
+
+
+    compile "com.android.support:multidex:1.0.1" // 多dex配置
+    //注释掉原有bugly的仓库
+    //compile 'com.tencent.bugly:crashreport:latest.release'//其中latest.release指代最新版本号，也可以指定明确的版本号，例如2.3.2
+    compile 'com.tencent.bugly:crashreport_upgrade:1.3.1'
+    compile 'com.tencent.bugly:nativecrashreport:latest.release'
 }
-apply from: 'tinkerpatch.gradle'
+apply from: 'tinker-support.gradle'
