--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,8 @@ buildscript {
         classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
         classpath 'com.jakewharton:butterknife-gradle-plugin:8.8.0'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-        classpath "com.tinkerpatch.sdk:tinkerpatch-gradle-plugin:1.1.8"
+        classpath "com.tencent.bugly:tinker-support:1.0.8"
+//        classpath "com.tinkerpatch.sdk:tinkerpatch-gradle-plugin:1.1.8"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
