[feature] add recommend activity

--- a/video/src/main/module/AndroidManifest.xml
+++ b/video/src/main/module/AndroidManifest.xml
@@ -36,9 +36,14 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".ui.RankDetailActivity" />
+        <activity android:name=".ui.SongListActivity" />
         <activity android:name=".ui.DownLoadActivity" />
         <activity android:name=".ui.MainActivity" />
+        <activity android:name=".ui.MusicRepositoryActivity" />
+
+        <meta-data
+            android:name="com.example.cootek.newfastframe.VideoApplication"
+            android:value="IModuleConfig" />
     </application>
 
 
