--- a/video/build.gradle
+++ b/video/build.gradle
@@ -64,13 +64,12 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile project(':commonlibrary')
-
-    compile 'com.afollestad.material-dialogs:core:0.9.1.0'
     compile rootProject.ext.dependencies.cardview
     compile rootProject.ext.dependencies.palette
-//    provided rootProject.ext.dependencies.dagger2_compiler
-//    compile 'com.afollestad.material-dialogs:core:0.9.1.0'
-
+//    compile 'com.afollestad.material-dialogs:core:0.9.4.7'
+//   compile "com.android.support:appcompat-v7:26.0.1"
+//    compile 'com.afollestad.material-dialogs:core:0.9.4.7'
+    compile 'com.afollestad.material-dialogs:commons:0.9.1.0'
     apt rootProject.ext.dependencies.dagger2_compiler
 
     if (!rootProject.ext.isAlone) {
