--- a/video/src/main/AndroidManifest.xml
+++ b/video/src/main/AndroidManifest.xml
@@ -42,8 +42,9 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".ui.LocalMusicListActivity"/>
-        <activity android:name=".ui.SingerInfoActivity"/>
+        <activity android:name=".ui.LocalMusicListActivity" />
+        <activity android:name=".ui.SingerInfoActivity" />
+        <activity android:name=".ui.SettingActivity" />
 
         <meta-data
             android:name="com.example.cootek.newfastframe.VideoApplication"
