[fix] theme and skin conflict

--- a/video/src/main/AndroidManifest.xml
+++ b/video/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
 
         <activity
             android:name=".ui.MainActivity"
-            android:launchMode="singleInstance" />
+            android:launchMode="singleTask" />
         <service
             android:name=".MusicService"
             android:process=":main" />
