--- a/live/build.gradle
+++ b/live/build.gradle
@@ -19,7 +19,10 @@ android {
         versionCode rootProject.ext.android.versionCode
         versionName rootProject.ext.android.versionName
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
+        ndk {
+            // 设置支持的SO库架构
+            abiFilters 'armeabi', 'armeabi-v7a'//, 'x86', 'x86_64', 'arm64-v8a'
+        }
         if (!rootProject.ext.isAlone) {
             javaCompileOptions {
                 annotationProcessorOptions {
@@ -59,18 +62,16 @@ android {
 //}
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile project(':commonlibrary')
     apt rootProject.ext.dependencies.dagger2_compiler
-
     if (!rootProject.ext.isAlone) {
         apt rootProject.ext.dependencies.arouter_compiler
     }
     testCompile 'junit:junit:4.12'
-
-
+    compile files('libs/pldroid-player-1.5.0.jar')
 }
 
