--- a/live/src/main/module/AndroidManifest.xml
+++ b/live/src/main/module/AndroidManifest.xml
@@ -7,6 +7,11 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.READ_LOGS" />
     <application
         android:name="com.example.commonlibrary.BaseApplication"
         android:allowBackup="true"
@@ -22,7 +27,13 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".MainActivity" />
+        <activity android:name=".MainActivity"
+            />
+
+        <activity android:name=".SearchLiveActivity"/>
+        <activity android:name=".VideoActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:windowSoftInputMode="stateHidden|stateUnchanged" />
 
         <meta-data
             android:name="com.example.live.LiveApplication"
