--- a/news/src/main/module/AndroidManifest.xml
+++ b/news/src/main/module/AndroidManifest.xml
@@ -7,26 +7,29 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <!-- sd卡存储-->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
+        android:name="com.example.commonlibrary.BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/CustomTheme.Day"
-        android:name="com.example.commonlibrary.BaseApplication"
-        >
+        android:theme="@style/CustomTheme.Day">
         <activity android:name=".NewsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="MainActivity"/>
+        <activity android:name="MainActivity" />
+        <activity android:name=".NewsContentActivity" />
 
-        <meta-data android:name="com.example.news.NewsApplication"
-            android:value="IModuleConfig"/>
+        <meta-data
+            android:name="com.example.news.NewsApplication"
+            android:value="IModuleConfig" />
     </application>
 
 </manifest>
