--- a/news/src/main/AndroidManifest.xml
+++ b/news/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
         <activity android:name=".LibraryLoginActivity" />
         <activity android:name=".LibraryContentActivity" />
         <activity android:name=".LibraryInfoActivity" />
+        <activity android:name=".CardInfoActivity"/>
+        <activity android:name=".CardLoginActivity"/>
 
         <meta-data
             android:name="com.example.cootek.newfastframe.VideoApplication"
