--- a/news/src/main/AndroidManifest.xml
+++ b/news/src/main/AndroidManifest.xml
@@ -25,11 +25,11 @@
         </activity>
         <activity android:name=".NewsContentActivity" />
         <activity android:name=".NewsContentActivity" />
-        <activity android:name=".LibraryLoginActivity" />
+        <activity android:name=".mvp.librarylogin.LibraryLoginActivity" />
         <activity android:name=".LibraryContentActivity" />
         <activity android:name=".LibraryInfoActivity" />
-        <activity android:name=".CardInfoActivity"/>
-        <activity android:name=".CardLoginActivity"/>
+        <activity android:name=".mvp.cardinfo.CardInfoActivity"/>
+        <activity android:name=".mvp.cardlogin.CardLoginActivity"/>
 
         <meta-data
             android:name="com.example.cootek.newfastframe.VideoApplication"
