--- a/news/src/main/module/AndroidManifest.xml
+++ b/news/src/main/module/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name=".LibraryInfoActivity"/>
         <activity android:name=".mvp.cardinfo.CardInfoActivity"/>
         <activity android:name=".mvp.cardlogin.CardLoginActivity"/>
+        <activity android:name=".mvp.news.othernew.special.SpecialNewsActivity"/>
 
         <meta-data
             android:name="com.example.news.NewsApplication"
