--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,19 @@ apply plugin: 'org.greenrobot.greendao'
 apply plugin: 'com.jakewharton.butterknife'
 apply plugin: 'com.neenbedankt.android-apt'
 android {
+//    signingConfigs {
+//        config {
+//            keyAlias 'chen'
+//            keyPassword '3929249'
+//            storeFile file('C:/Users/COOTEK/chen_key.jks')
+//            storePassword '3929249'
+//        }
+//    }
     signingConfigs {
         config {
             keyAlias 'chen'
             keyPassword '3929249'
-            storeFile file('C:/Users/COOTEK/chen_key.jks')
+            storeFile file('C:/Users/Administrator/frame.jks')
             storePassword '3929249'
         }
     }
@@ -59,15 +67,17 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     if (!rootProject.ext.isAlone) {
-        compile project(':video')
+        compile project(':music')
+        compile project(':news')
+        compile project(':live')
+
         apt rootProject.ext.dependencies.arouter_compiler
     } else {
         compile project(':commonlibrary')
     }
     testCompile 'junit:junit:4.12'
-
-
-    compile "com.android.support:multidex:1.0.1" // 多dex配置
+    compile 'com.android.support:multidex:1.0.1'
+    // 多dex配置
     //注释掉原有bugly的仓库
     compile 'com.tencent.bugly:crashreport_upgrade:1.3.1'
     compile 'com.tencent.bugly:nativecrashreport:latest.release'
