--- a/news/src/main/AndroidManifest.xml
+++ b/news/src/main/AndroidManifest.xml
@@ -13,17 +13,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".NewsContentActivity" />
+        android:supportsRtl="true">
+        <activity android:name=".MainActivity"/>
         <activity android:name=".NewsContentActivity" />
         <activity android:name=".mvp.librarylogin.LibraryLoginActivity" />
         <activity android:name=".LibraryInfoActivity" />
@@ -33,7 +25,7 @@
         <activity android:name=".mvp.news.othernew.detail.OtherNewsDetailActivity"/>
         <activity android:name=".mvp.news.othernew.photo.OtherNewPhotoSetActivity"/>
         <meta-data
-            android:name="com.example.cootek.newfastframe.VideoApplication"
+            android:name="com.example.news.NewsApplication"
             android:value="IModuleConfig" />
     </application>
 
