--- a/config.gradle
+++ b/config.gradle
@@ -1,5 +1,5 @@
 ext {
-    isAlone = false;//false:作为Lib组件存在， true:作为application存在
+    isAlone = true;//false:作为Lib组件存在， true:作为application存在
 
     android = [
 
