--- a/news/build.gradle
+++ b/news/build.gradle
@@ -82,6 +82,7 @@ android {
         // html text
         compile 'com.zzhoujay.richtext:richtext:2.0.9'
         apt rootProject.ext.dependencies.dagger2_compiler
+        compile rootProject.ext.dependencies.cardview
         if (!rootProject.ext.isAlone) {
             apt rootProject.ext.dependencies.arouter_compiler
         }
