--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,10 @@ android {
 //            storePassword '3929249'
 //        }
 //    }
+    aaptOptions {
+        cruncherEnabled = false
+//        useNewCruncher = false
+    }
     signingConfigs {
         config {
             keyAlias 'chen'
@@ -29,6 +33,7 @@ android {
         versionName rootProject.ext.android.versionName
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
 
         ndk {
             // 设置支持的SO库架构
@@ -67,17 +72,15 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     if (!rootProject.ext.isAlone) {
+        compile project(':chat')
         compile project(':music')
         compile project(':news')
         compile project(':live')
-
         apt rootProject.ext.dependencies.arouter_compiler
     } else {
         compile project(':commonlibrary')
     }
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:multidex:1.0.1'
-    // 多dex配置
     //注释掉原有bugly的仓库
     compile 'com.tencent.bugly:crashreport_upgrade:1.3.1'
     compile 'com.tencent.bugly:nativecrashreport:latest.release'
