--- a/commonlibrary/build.gradle
+++ b/commonlibrary/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'org.greenrobot.greendao'
 
-apply plugin: 'com.jakewharton.butterknife'
+//apply plugin: 'com.jakewharton.butterknife'
 
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
@@ -30,17 +30,12 @@ android {
     }
 }
 
-//greendao {
-//    schemaVersion 1
-//    daoPackage 'com.example.commonlibrary'
-//    targetGenDir 'src/main/java/greendao'
-//}
+
 
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -50,21 +45,17 @@ dependencies {
     }
     compile rootProject.ext.dependencies.recycleview
     compile rootProject.ext.dependencies.design
-
-//    compile(rootProject.ext.dependencies.support_v4) {
-//        exclude module: "support-annotations"
-//    }
+    //    compile(rootProject.ext.dependencies.support_v4) {
+    //        exclude module: "support-annotations"
+    //    }
     compile rootProject.ext.dependencies.annotations
     compile(rootProject.ext.dependencies.butterknife) {
         exclude module: 'support-annotations'
     }
     compile rootProject.ext.dependencies.rxjava2
-
-
     compile(rootProject.ext.dependencies.rxjava2_android) {
         exclude module: "rxjava"
     }
-
     compile(rootProject.ext.dependencies.rxlifecycle2) {
         exclude module: 'rxjava'
         exclude module: 'jsr305'
@@ -77,8 +68,6 @@ dependencies {
         exclude module: 'rxandroid'
         exclude module: 'rxlifecycle'
     }
-
-
     compile(rootProject.ext.dependencies.retrofit) {
         exclude module: 'okhttp'
         exclude module: 'okio'
@@ -89,6 +78,7 @@ dependencies {
         exclude module: 'okio'
         exclude module: 'retrofit'
     }
+
     compile(rootProject.ext.dependencies.retrofit_adapter_rxjava2) {
         exclude module: 'rxjava'
         exclude module: 'okhttp'
@@ -96,21 +86,21 @@ dependencies {
         exclude module: 'okio'
     }
     compile rootProject.ext.dependencies.greenDao
-    compile rootProject.ext.dependencies.okhttp3
+//    compile rootProject.ext.dependencies.okhttp3
     compile rootProject.ext.dependencies.gson
     compile rootProject.ext.dependencies.glide
-    compile rootProject.ext.dependencies.eventBus
+    //    compile rootProject.ext.dependencies.eventBus
     compile rootProject.ext.dependencies.dagger2
     compile(rootProject.ext.dependencies.rxpermission) {
         exclude module: 'rxjava'
     }
     compile rootProject.ext.dependencies.retrofit_converter_scalars
     annotationProcessor rootProject.ext.dependencies.dagger2_compiler
-    annotationProcessor rootProject.ext.dependencies.butterknife_compiler
-    compile rootProject.ext.dependencies.butterknife
+    //    annotationProcessor rootProject.ext.dependencies.butterknife_compiler
+    //    compile rootProject.ext.dependencies.butterknife
     compile rootProject.ext.dependencies.transformations
-    compile 'com.android.support:multidex:1.0.1'
-
-
+    compile rootProject.ext.dependencies.multidex
     compile rootProject.ext.dependencies.arouter_api
+    compile files('libs/nineoldandroids-2.4.0.jar')
+    compile files('libs/pinyin4j-2.5.0.jar')
 }
